tests/rosetta/out/Zig/abelian-sandpile-model-identity.error
zig build: exit status 1
/tmp/abelian-sandpile-model-identity.zig:123:224: error: local constant 'res' shadows local variable from outer scope
/tmp/abelian-sandpile-model-identity.zig:120:9: note: previous declaration here
